Extension printing + Fix platform binding extension names (#2160)