@@ -32,7 +32,7 @@ public class TestExtensionAvailable
         MutableList<PureCoreExtension> extensions =  PureCoreExtensionLoader.extensions();
         Assert.assertEquals(1, extensions.selectInstancesOf(M2MJavaBindingPureCoreExtension.class).get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).size());
         Assert.assertEquals(1, extensions.selectInstancesOf(BindingJavaBindingPureCoreExtension.class).get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).size());
-        Assert.assertEquals("PlatformBindingExtension", extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
-        Assert.assertEquals("PlatformBindingExtension", extensions.get(1).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
+        Assert.assertEquals("PlatformBinding - LegendJava - InMemory", extensions.get(0).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
+        Assert.assertEquals("PlatformBinding - LegendJava - ExternalFormatCore", extensions.get(1).extraPureCoreExtensions(PureModel.CORE_PURE_MODEL.getExecutionSupport()).getFirst()._type());
     }
 }
